pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: helloworld
  namespace: default
spec:
  containers:
  - image: graytshirt/hello_world:latest
    name: helloworld
    livenessProbe:
      httpGet:
        path: /
        port: 80
        scheme: HTTP
    ports:
    - containerPort: 80
      name: http
      protocol: TCP
    resources:
      requests:
        cpu: 10m
        memory: 5Mi
