ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: helloworld
  namespace: default
spec:
  rules:
  - host: hello.world
     http:
     paths:
     - backend:
       serviceName: helloworld
       servicePort: 80
       path: /
